(Basic translation) Translating estimated weight label

--- a/public/lang/ar/translation.json
+++ b/public/lang/ar/translation.json
@@ -1,4 +1,5 @@
 {
   "app_name": "جروتباسكت",
-  "weekly_basket_title": "أغسطس ١٧ ٢٠٢٠ — في الجروتباسكت هذا الإسبوع"
+  "weekly_basket_title": "أغسطس ١٧ ٢٠٢٠ — في الجروتباسكت هذا الإسبوع",
+  "estimated_weight": "الوزن المقدر"
 }
