--- a/public/lang/en/translation.json
+++ b/public/lang/en/translation.json
@@ -1,4 +1,5 @@
 {
   "app_name": "Grootbasket",
-  "weekly_basket_title": "In this Week's Grootbasket"
+  "weekly_basket_title": "In this Week's Grootbasket",
+  "estimated_weight": "Estimated weight"
 }
