Adding interpolated value in message

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
   "weekly_basket_title": "In this Week's Grootbasket",
   "weekly_basket": "Weekly Basket",
   "estimated_weight": "Estimated weight",
-  "footer": "Demo for <2>Phrase blog</2> article.<5/>Created with React, i18next, and Bulma."
+  "footer": "Demo for <2>Phrase blog</2> article.<5/>Created with React, i18next, and Bulma.",
+  "hello_user": "Hello, {{user}}"
 }
