--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -3,5 +3,6 @@
   "weekly_basket": "السلة الإسبوعية",
   "weekly_basket_title": "أغسطس ١٧ ٢٠٢٠ — في الجروتباسكت هذا الإسبوع",
   "estimated_weight": "الوزن المقدر",
-  "footer": "عرض لمقالة في <2>مدونة فرايز</2>.<5/>بني بواسطة ريأكت و أي إيتين نكست و بولما."
+  "footer": "عرض لمقالة في <2>مدونة فرايز</2>.<5/>بني بواسطة ريأكت و أي إيتين نكست و بولما.",
+  "hello_user": "أهلاً {{user}}"
 }
