--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,5 @@
   "weekly_basket": "Weekly Basket",
   "estimated_weight": "Estimated weight",
   "footer": "Demo for <2>Phrase blog</2> article.<5/>Created with React, i18next, and Bulma.",
-  "hello_user": "Hello, {{user}}"
+  "hello_user": "Hello, {{user.firstName}}"
 }
