--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -5,6 +5,10 @@
   "estimated_weight": "الوزن المقدر",
   "footer": "عرض لمقالة في <2>مدونة فرايز</2>.<5/>بني بواسطة ريأكت و أي إيتين نكست و بولما.",
   "hello_user": "أهلاً {{user.firstName}}",
-  "basket_delivered": "{{count}} سبت تم توصيله",
-  "basket_delivered_plural": "{{count}} سبت تم توصيله"
+  "basket_delivered_0": "لم يتم توصيل سلال",
+  "basket_delivered_1": "تم توصيل سله {{count}}",
+  "basket_delivered_2": "تم توصيل سلتان",
+  "basket_delivered_3": "تم توصيل {{count}} سلال",
+  "basket_delivered_4": "تم توصيل {{count}} سله",
+  "basket_delivered_5": "تم توصيل {{count}} سله"
 }
