--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "app_name": "Grootbasket",
-  "weekly_basket_title": "In this Week's Grootbasket",
+  "weekly_basket_title": "In this Week's Grootbasket — {{date, date}}",
   "weekly_basket": "Weekly Basket",
   "estimated_weight": "Estimated weight",
   "footer": "Demo for <2>Phrase blog</2> article.<5/>Created with React, i18next, and Bulma.",
