--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,7 +1,7 @@
 {
   "app_name": "جروتباسكت",
   "weekly_basket": "السلة الإسبوعية",
-  "weekly_basket_title": "في الجروتباسكت هذا الإسبوع — {{date, date}}",
+  "weekly_basket_title": "في الجروتباسكت هذا الإسبوع — {{date, default}}",
   "estimated_weight": "الوزن المقدر",
   "footer": "عرض لمقالة في <2>مدونة فريز</2>.<5/>بني بواسطة ريأكت و أي إيتين نكست و بولما.",
   "hello_user": "أهلاً {{user.firstName}}",
