--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -3,12 +3,13 @@
   "weekly_basket": "السلة الإسبوعية",
   "weekly_basket_title": "في الجروتباسكت هذا الإسبوع — {{date, default}}",
   "estimated_weight": "الوزن المقدر",
+  "estimated_weight_kg": "{{weight, style: unit, unit: kilogram}}",
   "footer": "عرض لمقالة في <2>مدونة فريز</2>.<5/>بني بواسطة ريأكت و أي إيتين نكست و بولما.",
   "hello_user": "أهلاً {{user.firstName}}",
   "basket_delivered_0": "لم يتم توصيل سلال",
-  "basket_delivered_1": "تم توصيل سله {{count}}",
+  "basket_delivered_1": "تم توصيل سله {{count, default}}",
   "basket_delivered_2": "تم توصيل سلتان",
-  "basket_delivered_3": "تم توصيل {{count}} سلال",
-  "basket_delivered_4": "تم توصيل {{count}} سله",
-  "basket_delivered_5": "تم توصيل {{count}} سله"
+  "basket_delivered_3": "تم توصيل {{count, default}} سلال",
+  "basket_delivered_4": "تم توصيل {{count, default}} سله",
+  "basket_delivered_5": "تم توصيل {{count, default}} سله"
 }
