--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,8 +3,9 @@
   "weekly_basket_title": "In this Week's Grootbasket — {{date, day: numeric, month: short, year: numeric}}",
   "weekly_basket": "Weekly Basket",
   "estimated_weight": "Estimated weight",
+  "estimated_weight_kg": "{{weight, style: unit, unit: kilogram}}",
   "footer": "Demo for <2>Phrase blog</2> article.<5/>Created with React, i18next, and Bulma.",
   "hello_user": "Hello, {{user.firstName}}",
-  "basket_delivered": "{{count}} basket delivered",
-  "basket_delivered_plural": "{{count}} baskets delivered"
+  "basket_delivered": "{{count, default}} basket delivered",
+  "basket_delivered_plural": "{{count, default}} baskets delivered"
 }
