--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "app_name": "Grootbasket",
+  "document_title": "Grootbasket — Your weekly organic basket",
   "weekly_basket_title": "In this Week's Grootbasket — {{date, date(day: numeric; month: short; year: numeric)}}",
   "weekly_basket": "Weekly Basket",
   "estimated_weight": "Estimated weight",
